# CPP3_SmartCalc_v2

./: CMakeLists.txt  Makefile  readme.md
calc/: Makefile  calc.pro  calculator.cpp  calculator.h  calculator.ui  controller.cpp  controller.h  credits.cpp  credits.h  credits.ui  deposit.cpp  deposit.h  deposit.ui  main.cpp  model.cc  model.h  qcustomplot.cpp  tests.cc  view.cpp  view.h
